[gd_scene load_steps=30 format=3 uid="uid://q7r31yidg88g"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_s5awy"]
[ext_resource type="PackedScene" uid="uid://fum0l3hil4ye" path="res://entities/actions/kick/kick.tscn" id="2_lqefg"]
[ext_resource type="PackedScene" uid="uid://um7g1axvk4nx" path="res://entities/actions/grab/grab.tscn" id="3_18o26"]
[ext_resource type="Script" path="res://entities/components/life.gd" id="3_po3r7"]
[ext_resource type="Script" path="res://entities/components/movement_top_down.gd" id="4_weakb"]
[ext_resource type="Script" path="res://entities/player/input_handlers/input_reader_bidirectional.gd" id="5_g7ux8"]
[ext_resource type="Script" path="res://entities/components/animation_handler.gd" id="5_xbre0"]
[ext_resource type="Script" path="res://entities/components/mono_group.gd" id="14_1wv4g"]
[ext_resource type="Script" path="res://entities/components/rotation.gd" id="74_k4cfl"]
[ext_resource type="Texture2D" uid="uid://dxdkfufp5levf" path="res://assets/dog animations/Head/Dog body_0000.png" id="75_2nyin"]
[ext_resource type="Script" path="res://entities/player/input_handlers/mouse_reader_rotation.gd" id="75_e0o7d"]
[ext_resource type="Texture2D" uid="uid://cvlp3e218u0xq" path="res://assets/dog animations/Bite/Sprite_Sheet.png" id="76_5tv3c"]
[ext_resource type="Texture2D" uid="uid://d4hhrn55nxsgf" path="res://assets/dog animations/Tail/Sprite_Sheet.png" id="76_tuc7a"]
[ext_resource type="Texture2D" uid="uid://prsj331wt77u" path="res://assets/dog animations/Lick/Sprite_Sheet.png" id="77_46b73"]

[sub_resource type="Animation" id="Animation_ddt0y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TailSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ev53e"]
resource_name = "hurt"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sjp73"]
_data = {
"RESET": SubResource("Animation_ddt0y"),
"hurt": SubResource("Animation_ev53e")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xbaix"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1hr4t"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_378xm"]
radius = 25.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7abv1"]
radius = 25.0
height = 88.0

[sub_resource type="Animation" id="Animation_oo08e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("75_2nyin")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_e8clt"]
resource_name = "bite"
length = 0.5333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("76_5tv3c")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_grab"
}]
}

[sub_resource type="Animation" id="Animation_746at"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("75_2nyin")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_n1hpg"]
resource_name = "lick"
length = 0.2667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("77_46b73")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../AnimationHandler")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["Head", "idle"],
"method": &"play_animation"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5cojh"]
_data = {
"RESET": SubResource("Animation_oo08e"),
"bite": SubResource("Animation_e8clt"),
"idle": SubResource("Animation_746at"),
"lick": SubResource("Animation_n1hpg")
}

[sub_resource type="Animation" id="Animation_p3eni"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TailSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gp07a"]
resource_name = "tail_wigle"
length = 0.7333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TailSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gnuj"]
_data = {
"RESET": SubResource("Animation_p3eni"),
"tail_wigle": SubResource("Animation_gp07a")
}

[node name="Player" type="CharacterBody2D" groups=["Time_stoppable"]]
collision_layer = 4
collision_mask = 33
script = ExtResource("1_s5awy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sjp73")
}

[node name="Life" type="Node" parent="."]
script = ExtResource("3_po3r7")

[node name="Movement" type="Node" parent="."]
script = ExtResource("4_weakb")
speed = 400.0

[node name="InputReader_Movement" type="Node" parent="."]
script = ExtResource("5_g7ux8")

[node name="Body" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_xbaix")

[node name="Kick" parent="." instance=ExtResource("2_lqefg")]
position = Vector2(92, -15)
rotation = 1.5708
shape = SubResource("CircleShape2D_1hr4t")
target_position = Vector2(27, 0.999901)
cooldown_seconds = 0.5

[node name="Grab" parent="." instance=ExtResource("3_18o26")]
position = Vector2(78, 3.40949e-06)
rotation = 1.5708
shape = SubResource("CircleShape2D_378xm")
target_position = Vector2(-1.00005, -13)

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(-8, -3.49691e-07)
rotation = 1.5708
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_7abv1")
debug_color = Color(0.803922, 0, 0.141176, 1)

[node name="Rotation" type="Node" parent="."]
script = ExtResource("74_k4cfl")
max_angle = 0

[node name="MouseReader_Rotation" type="Node2D" parent="."]
rotation = 1.5708
script = ExtResource("75_e0o7d")
limit_left = 0.0
limit_right = 810.0
reset_off_limits = true
default_aim_direction = Vector2(0, -1)

[node name="HeadSprite" type="Sprite2D" parent="."]
position = Vector2(57, 1)
rotation = 1.57079
texture = ExtResource("75_2nyin")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HeadSprite"]
libraries = {
"": SubResource("AnimationLibrary_5cojh")
}

[node name="TailSprite" type="Sprite2D" parent="."]
position = Vector2(-70, 1)
rotation = 1.5708
texture = ExtResource("76_tuc7a")
hframes = 4
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="TailSprite"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8gnuj")
}

[node name="AnimationHandler" type="Node" parent="."]
script = ExtResource("5_xbre0")

[node name="MonoGroup" type="Node" parent="."]
script = ExtResource("14_1wv4g")
group_name = "Player"

[connection signal="death" from="Life" to="." method="_on_death"]
[connection signal="invecibility_end" from="Life" to="AnimationHandler" method="stop_named_animation" binds= ["Body", "hurt"]]
[connection signal="move" from="InputReader_Movement" to="Movement" method="move"]
[connection signal="started" from="Kick" to="AnimationHandler" method="play_animation" binds= ["Head", "lick"]]
[connection signal="started" from="Grab" to="AnimationHandler" method="play_animation" binds= ["Head", "bite"]]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="rotate" from="MouseReader_Rotation" to="Rotation" method="rotate"]
[connection signal="tree_entered" from="AnimationHandler" to="AnimationHandler" method="register" binds= [{
"Body": NodePath("../AnimationPlayer"),
"Head": NodePath("../HeadSprite/AnimationPlayer"),
"Tail": NodePath("../TailSprite/AnimationPlayer")
}]]
